Made skin dose map inforamtion text turn white when viewing 3d map so that it remains legible. Made a few tweats to other html to make it more correct. References issue #61

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -183,6 +183,14 @@ div.skinDoseMapInformation {
   font-size: x-small;
 }
 
+.whiteText {
+  color: white;
+}
+
+a.whiteText {
+  color: white;
+}
+
 div.colourScale {
   position: absolute;
   padding: 0px;
